# mcp-scapes

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
mcpscapes/child/: graph.py  server.py  store.py
mcpscapes/meta/: map.py  registry.py  router.py  server.py
mcpscapes/shared/: embedder.py  models.py
tests/: test_child.py  test_meta.py  test_routing.py
