[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-scapes"
version = "0.1.0"
description = "A semantically-routed, topographic MCP federation with soft/overlapping context"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "sentence-transformers",
    "numpy",
    "scipy",
    "sqlite-vec",
    "pydantic>=2.0",
    "httpx",
    "uvicorn",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
topomcp-meta = "mcpscapes.meta.server:run"
topomcp-child = "mcpscapes.child.server:run"

[tool.hatch.build.targets.wheel]
packages = ["mcpscapes"]
